gitlab-app/argocd/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "argocd.local"
    - "vault.local"
    - "gitlab.local"
    - "seaweeds.local"
  - port:
      number: 22
      name: ssh
      protocol: TCP
    hosts:
    - "gitlab.local"
