gitlab-app/argocd/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gitlab-vs
  namespace: gitlab-stage
spec:
  hosts:
  - "gitlab.local"
  gateways:
  - istio-system/main-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: k3s-gitlab-stage-webservice-default.gitlab-stage.svc.cluster.local
        port:
          number: 8181
